GitLab CI: install git

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ variables:
 
 default:
   interruptible: true
+  before_script:
+    - apt-get update
+    - apt-get install -y git    
 
 cache: &cache
   key:
