--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "npx vite serve",
     "dev": "${npm_execpath} run start",
-    "build": "npx vite build",
+    "build": "bunx --bun vite build",
     "manage:translations": "npx ts-node ./scripts/translationRunner.ts",
     "i18n": "rm -rf build tmp && npx cross-env NODE_ENV=production ${npm_execpath} run build && ${npm_execpath} manage:translations en",
     "test": "npx cross-env NODE_ENV=test npx jest",
